--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - .:/messageme_chat
     ports:
       - "3000:3000"
+    stdin_open: true
+    tty: true
     depends_on:
       - db
   adminer:
